--- a/package.json
+++ b/package.json
@@ -1,25 +1,51 @@
 {
-    "private": true,
-    "scripts": {
-        "development": "vite",
-        "production": "vite build",
-        "dev:default": "vite --config themes/default/vite.config.js",
-        "build:default": "vite build --config themes/default/vite.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.25",
-        "bootstrap": "^4.6.0",
-        "jquery": "^3.5",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.16",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.1",
-        "sass-loader": "^10.1.1"
-    },
-    "dependencies": {
-        "tinymce": "^7.0.0",
-        "vite": "^6.1.0",
-        "laravel-vite-plugin": "^0.7.3"
-    }
+  "private": true,
+  "scripts": {
+    "development": "vite",
+    "production": "vite build",
+    "dev:default": "vite --config themes/default/vite.config.js",
+    "build:default": "vite build --config themes/default/vite.config.js"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^0.25",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5",
+    "lodash": "^4.17.19",
+    "popper.js": "^1.16",
+    "postcss": "^8.5.6",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.1",
+    "sass-loader": "^10.1.1",
+    "tailwindcss": "3",
+    "tw-animate-css": "^1.3.4",
+    "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.20.5",
+    "install": "^0.13.0",
+    "laravel-vite-plugin": "^1.3.0",
+    "lucide-react": "^0.525.0",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
+    "postinstall": "^0.11.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.3",
+    "tailwind-merge": "^3.3.1",
+    "tinymce": "^7.0.0"
+  },
+  "trustedDependencies": [
+    "@swc/core",
+    "es5-ext"
+  ]
 }
