--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
         "ext-intl": "*",
         "ext-mysqli": "*",
         "biscolab/laravel-recaptcha": "^6.1",
-        "doctrine/dbal": "^4.0.4",
+        "doctrine/dbal": "^4.2",
         "guzzlehttp/guzzle": "^7.5",
         "hidehalo/nanoid-php": "^1.1.12",
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "kkomelin/laravel-translatable-string-exporter": "^1.22",
         "laravel/framework": "^11.32",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.5.2",
         "laraveldaily/laravel-invoices": "^4.0.0",
