--- a/package.json
+++ b/package.json
@@ -23,26 +23,41 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
+    "@heroui/shared-icons": "^2.1.9",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-router": "^1.124.0",
+    "@tanstack/router": "^0.0.1-beta.53",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.20.5",
     "install": "^0.13.0",
     "laravel-vite-plugin": "^1.3.0",
     "lucide-react": "^0.525.0",
+    "nprogress": "^0.2.0",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
     "postinstall": "^0.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.0.2",
+    "sonner": "^2.0.5",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tinymce": "^7.0.0"
   },
